remove extraneous bracket

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <p>Step 1: Contact CERT - Have you contacted <a href="https://forms.cert.org/VulReport/">CERT</a>? This is often the easiest way to report a vulnerablity. CERT handles the vendor coordination and disclosure process on your behalf. However, as stated on their site, they may not "coordinate or publish every report". CERT is best when you are unable to reach the vendor, do not wish for the vendor to know who you are, disagree with the vendor, or are reporting a vulnerability that affects multiple vendors. If the vulnerability you are reporting is already public, it is likely that CERT will not take any action.</p>
 
-        <p>Step 2: Report it to the vendor - Have a look at <a href="https://raw.githubusercontent.com/disclose/disclose.github.io/master/policies/rfpolicy-2.0.txt">RFPolicy 2.0></a></p>
+        <p>Step 2: Report it to the vendor - Have a look at <a href="https://raw.githubusercontent.com/disclose/disclose.github.io/master/policies/rfpolicy-2.0.txt">RFPolicy 2.0</a></p>
 
         <h3>
         <a name="rather-drive-stick" class="anchor" href="#maintainer"><span class="octicon octicon-link"></span></a>Had a vulnerability disclosed?</h3>
