--- a/index.html
+++ b/index.html
@@ -45,10 +45,9 @@
         <p>Disclose.io would not be possible without <a href="https://github.com/disclose/disclose.github.io/graphs/contributors">these folks</a>.</p>
       </section>
       <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-    
   </body>
 </html>
