--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <h1>Disclose.io</h1>
         <p></p>
 
+        <p>Community-maintained vulnerability reporting guidance.</p>
+
         <p class="view"><a href="#reporter">I'm trying to disclose a vulnerability.</a></p>
         <p class="view"><a href="#maintainer">I've had a vulnerability disclosed.</a></p>
 
