--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1>Disclose.io</h1>
         <p></p>
 
-        <p>Community-maintained vulnerability reporting guidance.</p>
+        <p>Community-maintained vulnerability disclosure guidance.</p>
 
         <p class="view"><a href="#reporter">I'm trying to disclose a vulnerability.</a></p>
         <p class="view"><a href="#maintainer">I've had a vulnerability disclosed.</a></p>
@@ -29,15 +29,15 @@
 
         <p>Disclose.io is a community-maintained resource for vulnerability disclosure. </p>
 
-        <h3>
-        <a name="designer-templates" class="anchor" href="#reporter"><span class="octicon octicon-link"></span></a>Disclosing a vulnerability?</h3>
+        <h3><a name="designer-templates" class="anchor" href="#reporter"><span class="octicon octicon-link"></span></a>Disclosing a vulnerability?</h3>
 
-        <p>Step 1: Contact CERT - Have you contacted <a href="https://forms.cert.org/VulReport/">CERT</a>? This is often the easiest way to report a vulnerablity. CERT handles the vendor coordination and disclosure process on your behalf. However, as stated on their site, they may not "coordinate or publish every report". CERT is best when you are unable to reach the vendor, do not wish for the vendor to know who you are, disagree with the vendor, or are reporting a vulnerability that affects multiple vendors. If the vulnerability you are reporting is already public, it is likely that CERT will not take any action.</p>
+        <p> You have a few options...</p>
 
-        <p>Step 2: Report it to the vendor - Have a look at <a href="https://raw.githubusercontent.com/disclose/disclose.github.io/master/policies/rfpolicy-2.0.txt">RFPolicy 2.0</a></p>
+        <p>Contact CERT - Have you contacted <a href="https://forms.cert.org/VulReport/">CERT</a>? This is often the easiest way to report a vulnerablity. CERT handles the vendor coordination and disclosure process on your behalf. However, as stated on their site, they may not "coordinate or publish every report". CERT is best when you are unable to reach the vendor, do not wish for the vendor to know who you are, disagree with the vendor, or are reporting a vulnerability that affects multiple vendors. If the vulnerability you are reporting is already public, it is likely that CERT will not take any action.</p>
 
-        <h3>
-        <a name="rather-drive-stick" class="anchor" href="#maintainer"><span class="octicon octicon-link"></span></a>Had a vulnerability disclosed?</h3>
+        <p>Report it to the vendor - Have a look at <a href="https://raw.githubusercontent.com/disclose/disclose.github.io/master/policies/rfpolicy-2.0.txt">RFPolicy 2.0</a></p>
+
+        <h3><a name="rather-drive-stick" class="anchor" href="#maintainer"><span class="octicon octicon-link"></span></a>Had a vulnerability disclosed?</h3>
 
         <p>Have a look at ... </p>
 
