add a list page

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
         <p>Community-maintained vulnerability disclosure guidance.</p>
 
+        <p class="view"><a href="index.html">Home</a></p>
+        <p class="view"><a href="list.html">Disclosure List</a></p>
         <p class="view"><a href="#reporter">I'm trying to disclose a vulnerability.</a></p>
         <p class="view"><a href="#maintainer">I've had a vulnerability disclosed.</a></p>
 
