--- a/list.html
+++ b/list.html
@@ -21,21 +21,19 @@
 
         <p class="view"><a href="index.html">Home</a></p>
         <p class="view"><a href="list.html">Disclosure List</a></p>
-        
+
       </header>
       <section>
         <h3><a name="designer-templates" class="anchor" href="#reporter"><span class="octicon octicon-link"></span></a>By organization</h3>
 
         <table>
         <tr>
-          <td>test</td>
-          <td>test</td> 
-          <td>test</td>
+          <td>Acme Enterprises</td>
+          <td>security@acme.com</td>
         </tr>
         <tr>
-          <td>test</td>
-          <td>test</td> 
-          <td>test</td>
+          <td>Fake Company</td>
+          <td>security@fake.com</td>
         </tr>
         </table>
 
