add a link to microsoft's program, add a note about the US

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 
         <h3><a name="researcher" class="anchor" href="#researcher"><span class="octicon octicon-link"></span></a>Performing security research?</h3>
 
-        As a researcher, you should familiarize yourself with the following:
+        Where are you located?
+
+        As a researcher in the United States, you should familiarize yourself with the following:
         <ul>
           <li><a href="http://en.wikipedia.org/wiki/Computer_Fraud_and_Abuse_Act">Computer Fraud and Abuse Act</a></li>
           <li><a href="http://en.wikipedia.org/wiki/Anti-circumvention">Anti-Circumvention Provisions of the DMCA</a></li>
@@ -68,6 +70,9 @@
           <li>Are you the maintainer for the software the vulnerability affects?</li>
           <li>Do you know how to fix the issue?</li>
         </ul>
+
+        <p>Examples of a mature approach to vulnerability disclosure </p>
+        <a href="https://technet.microsoft.com/en-us/security/dn467923.aspx"> Microsoft's Coordinated Disclosure policy </a>
 
         <p> External Links </p>
         <ul>
